cargo-features = ["profile-rustflags"]

[package]
name = "nazo6-neg-nrf"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.8.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
] }
embassy-nrf = { version = "0.6.0", features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
] }

neg-nrf = { path = "../../rktk/keyboards/neg-nrf" }
rktk = { path = "../../rktk/lib/rktk" }

cortex-m-rt = { version = "0.7.3" }

[features]
_check = ["neg-nrf/right"]

default = ["defmt", "neg-nrf/rrp", "neg-nrf/pmw3360"]

defmt = ["neg-nrf/defmt"]
